# Trading-Coach

./: .env.example  .gitignore  DECISIONS.md  README.md  docker-compose.yml  init.sql  main.py  pyproject.toml  render.yaml
app/: main.py
app/api/: audit.py  health.py  memory.py  profile.py  session.py  trades.py
app/auth/: dependencies.py  jwt_handler.py  middleware.py
app/core/: aggregation.py  feature_engine.py  pattern_engine.py
app/db/: repository.py  sessions.py
app/schemas/: audit.py  memory.py  session.py
app/services/: audit_service.py  llm_service.py  memory_service.py  session_service.py
app/utils/: constants.py
docker/: Dockerfile  entrypoint.sh
eval/: report.json  run_eval.py
scripts/: seed_db.py
tests/: test_api_v1.py  test_detectors.py  test_llm.py
